--- a/web/lab7/style.css
+++ b/web/lab7/style.css
@@ -1,33 +1,21 @@
-/* Завдання 3 */
 table,
 td,
 th {
     border: 1px solid red;
 }
 
-/* Завдання 4 */
 * {
     border-collapse: collapse;
 }
 
-/* Завдання 5 */
-.frmtbl {
-    /* Стиль для таблиці загалом */
-}
+.frmtbl {}
 
-.frmtbl thead {
-    /* Стиль для заголовка таблиці */
-}
+.frmtbl thead {}
 
-.frmtbl tbody {
-    /* Стиль для основної частини таблиці */
-}
+.frmtbl tbody {}
 
-.frmtbl tfoot {
-    /* Стиль для нижньої частини таблиці */
-}
+.frmtbl tfoot {}
 
-/* Завдання 6 */
 .marked-list {
     list-style-type: square;
     list-style-position: inside;
@@ -35,7 +23,6 @@ th {
     margin-left: 50px;
 }
 
-/* Завдання 8 */
 #layer {
     background-color: yellow;
     border: 2px solid green;
@@ -47,7 +34,6 @@ th {
     clip: rect(40px, auto, auto, 40px);
 }
 
-/* Завдання 9 */
 .image-container {
     border: 1px solid;
     width: 200px;
@@ -55,14 +41,12 @@ th {
     overflow: hidden;
 }
 
-/* Завдання 10 */
 .scrollbar-styling {
     width: 200px;
     height: 100px;
     overflow: auto;
 }
 
-/* Завдання 10 (IE Styling) */
 html,
 body {
     scrollbar-3dlight-color: red;
