--- a/tspp/lr2/backup/unit1.lfm
+++ b/tspp/lr2/backup/unit1.lfm
@@ -1,45 +1,48 @@
 object Form1: TForm1
-  Left = -4
-  Height = 406
-  Top = 212
-  Width = 509
-  Caption = 'Evgeniy_Pelikh'
-  ClientHeight = 406
-  ClientWidth = 509
-  Color = cl3DDkShadow
+  Left = 320
+  Height = 279
+  Top = 140
+  Width = 529
+  Caption = 'Evgeniy_Pelikh-IST-21-1'
+  ClientHeight = 279
+  ClientWidth = 529
+  Color = clNavy
   DesignTimePPI = 144
   LCLVersion = '3.0.0.3'
   object Button1: TButton
-    Left = 8
-    Height = 30
-    Top = 8
-    Width = 106
-    Caption = '1 Task'
+    Left = 56
+    Height = 72
+    Top = 32
+    Width = 152
+    Caption = 'TASK 1'
     TabOrder = 0
     OnClick = Button1Click
   end
   object Button2: TButton
-    Left = 126
-    Height = 30
-    Top = 8
-    Width = 106
-    Caption = 'Button2'
+    Left = 344
+    Height = 72
+    Top = 32
+    Width = 153
+    Caption = 'TASK 2'
     TabOrder = 1
+    OnClick = Button2Click
   end
   object Button3: TButton
-    Left = 248
-    Height = 30
-    Top = 8
-    Width = 106
-    Caption = 'Button3'
+    Left = 56
+    Height = 80
+    Top = 152
+    Width = 152
+    Caption = 'TASK 3'
     TabOrder = 2
+    OnClick = Button3Click
   end
   object Button4: TButton
-    Left = 360
-    Height = 30
-    Top = 8
-    Width = 106
-    Caption = 'Button4'
+    Left = 344
+    Height = 80
+    Top = 152
+    Width = 153
+    Caption = 'TASK 4'
     TabOrder = 3
+    OnClick = Button4Click
   end
 end
